# iganet

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CODESTYLE.md  README.md  iganet.sublime-project  iganet.sublime-workspace  setup.py
.circleci/: config.yml
.github/workflows/: ci-pr.yml  ci-push.yml  ci.yml  cmake-multi-platform.yml  gh-pages.yml  gitlab-sync.yml
cmake/: Matplot++.cmake  boost_preprocessor.cmake  genJIT.cmake  get_module.cmake  gismo.cmake  gismo.patch  nlohmann_json.cmake  popl.cmake  pugixml.cmake  pybind11.cmake  uwebsockets.cmake  uwebsockets.patch  websockets.cmake
docs/: CMakeLists.txt  Doxyfile.in  Doxygen.bib  README.md  conf.py  header.html  index.rst  tutorial01.cxx  tutorial01.md  tutorial02.cxx  tutorial02.md
docs/sections/: advanced.rst  api_documentation.rst  basics.rst  faq.rst  installation_guide.rst  library.rst  release_notes.rst  tutorials.rst
examples/: CMakeLists.txt  iganet_fitting.cxx  iganet_fitting_geometry.cxx  iganet_fitting_geometry_autotune.cxx  iganet_fitting_geometry_dataloader.cxx  iganet_fitting_geometry_dataloader_autotune.cxx  iganet_fitting_geometry_simple.cxx  iganet_fitting_simple.cxx  iganet_poisson.cxx  iganet_stokes.cxx  nonuniform_bsplines.cxx  uniform_bsplines.cxx
filedata/domain1d/: line.xml
filedata/domain3d/: cube_boundary.xml
filedata/domain4d/: hypercube_boundary.xml
filedata/surfaces/2d/: geo01.xml  geo02.xml  geo03.xml  geo04.xml  geo05.xml  geo06.xml  geo07.xml  geo08.xml  geo09.xml  geo10.xml  geo11.xml  geo12.xml  geo13.xml  geo14.xml  geo15.xml  geo16.xml  geo17.xml  geo18.xml  geo19.xml  geo20.xml  quadCircleB_resultR0E0Fixed.xml  quadCircleNUB.xml  quadCircleNUB_ref.xml
filedata/surfaces/3d/: geo01.xml  geo02.xml  geo03.xml  geo04.xml  geo05.xml  geo06.xml  geo07.xml  geo08.xml  geo09.xml  geo10.xml  geo11.xml  geo12.xml  geo13.xml  geo14.xml  geo15.xml  geo16.xml  geo17.xml  geo18.xml  geo19.xml  geo20.xml
include/: .iganet_pch.cxx  CMakeLists.txt  blocktensor.hpp  boundary.hpp  bspline.cuh  bspline.hpp  config.hpp.in  core.h  core.hpp  creator.hpp  ezsolver.hpp  functionspace.hpp  geometry.h  igabase.hpp  iganet.h  iganet.hpp  igasolver.hpp  jit.hpp.in  layer.hpp  matrix.hpp  memory.hpp  multipatch.hpp  net.h  nurbs.hpp  optimizer.hpp  options.hpp  patch.hpp  solver.h  splines.h  sysinfo.hpp  utils.h  utils.hpp  zip.hpp
include/core/: core.hpp  memory.hpp  options.hpp  sysinfo.hpp
include/geometry/: creator.hpp
include/net/: activation.hpp  collocation.hpp  generator.hpp  igabase.hpp  iganet.hpp  layer.hpp  optimizer.hpp
include/net/v1/: iganet.hpp
include/solver/: ezsolver.hpp  igasolver.hpp
include/splines/: boundary.hpp  bspline.hpp  functionspace.hpp  multipatch.hpp  nurbs.hpp  patch.hpp
include/utils/: blocktensor.hpp  concat.hpp  container.hpp  convert.hpp  fqn.hpp  getenv.hpp  index_sequence.hpp  integer_pow.hpp  linalg.hpp  matrix.hpp  serialize.hpp  solver.hpp  spsolver.hpp  tensorarray.hpp  tuple.hpp  type_traits.hpp  uuid.hpp  vslice.hpp  zip.hpp
mex/src/: CMakeLists.txt  mexbspline.cpp
ops/: Dockerfile.webapps-cpu  Dockerfile.webapps-gitlab-ci
perftests/: CMakeLists.txt
pyiganet/src/: CMakeLists.txt  pyoptions.cxx
unittests/: CMakeLists.txt  README.md  unittest_blocktensor.cxx  unittest_boundary.cxx  unittest_bspline.cxx  unittest_bspline.py  unittest_bsplinelib.hpp  unittest_config.hpp.in  unittest_functionspace.cxx  unittest_iganet.cxx  unittest_matrix.cxx  unittest_nonuniform_bspline.cxx  unittest_nonuniform_bspline_eval.cxx  unittest_nonuniform_bspline_eval1.cxx  unittest_nonuniform_bspline_eval2.cxx  unittest_nonuniform_bspline_eval3.cxx  unittest_nonuniform_bspline_eval4.cxx  unittest_nonuniform_bspline_eval_optimized.cxx  unittest_nonuniform_rational_bspline.cxx  unittest_nonuniform_rational_bspline_eval.cxx  unittest_options.cxx  unittest_performance.cxx  unittest_splinelib.hpp  unittest_uniform_bspline.cxx  unittest_uniform_bspline_eval.cxx  unittest_uniform_bspline_eval1.cxx  unittest_uniform_bspline_eval2.cxx  unittest_uniform_bspline_eval3.cxx  unittest_uniform_bspline_eval4.cxx  unittest_uniform_bspline_eval_optimized.cxx
webapps/: CMakeLists.txt  README.md  config.hpp.in  model.hpp  modelmanager.hpp  pluginloader.hpp  pluginmanager.hpp  protocol.md  server.cfg  server.cxx  webapps_config.hpp.in
webapps/config/: server-nossl.cfg  server.cfg
webapps/filedata/pytorch/: BSplineSurface.pt  Session.0.pt  Session.1.pt  Session.2.pt  Session.ptc
webapps/filedata/xml/: BSplineSurface.xml  BSplineSurfaceComponent.xml  Session.xml
webapps/models/: BSpline.hpp  BSplineCurve.cxx  BSplineModel.hpp  BSplineSurface.cxx  BSplineVolume.cxx  CMakeLists.txt  GismoModel.hpp  GismoPdeModel.hpp  GismoPoisson2d.cxx  GismoPoissonModel.hpp  Poisson2d.cxx  jit.hpp.in
webapps/models/gismo/: CMakeLists.txt  GismoGeometryModel.hpp  GismoKLShellModel.hpp  GismoLinearElasticity2d.cxx  GismoLinearElasticity3d.cxx  GismoLinearElasticityModel.hpp  GismoModel.hpp  GismoPdeModel.hpp  GismoPoisson2d.cxx  GismoPoisson3d.cxx  GismoPoissonModel.hpp  GismoSurfaceReparameterization.hpp
webapps/models/iganet/: BSplineCurve.cxx  BSplineModel.hpp  BSplineSurface.cxx  BSplineVolume.cxx  CMakeLists.txt  Poisson2d.cxx  jit.hpp.in
webapps/plugins/: BSpline.cxx  CMakeLists.txt  Poisson2d.cxx
webapps/unittests/: BSplineSurface.xml  Session.ptc  Session.xml  test_server.py  wsiganet.py
